# jinjer

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  requirements.yml  vagrant.yml
.cargo/: config
examples/: cpu_count.j2  path.j2
src/: cli.rs  cmd.rs  facts.rs  logging.rs  main.rs
src/cmd/: facts.rs  render.rs
src/facts/: plugins.rs
src/facts/plugins/: basic.rs  ec2.rs  env.rs
src/facts/plugins/ec2/: metadata.rs
