[package]
name = "jinjer"
version = "0.1.0"
authors = ["Naftuli Kay <me@naftuli.wtf>"]
edition = "2018"

[dependencies]
actix-rt = "0.2"
actix-web = "1.0"
crossbeam = "0.7"
futures = "0.1"
log = "0.4"
log4rs = "0.8"
num_cpus = "1.10"
parking_lot = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
tera = "1.0.0-beta.9"
